sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: not found: value i
    i=0
    ^AlgCombSort:10: error: not found: value i
    while (i+ecart < getNombreValeurs()){
           ^AlgCombSort:11: error: not found: value i
      if (! plusPetit(i,i+ecart)){
                      ^AlgCombSort:11: error: not found: value i
      if (! plusPetit(i,i+ecart)){
                        ^AlgCombSort:12: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:12: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:15: error: not found: value i
      i=i+1
      ^